update link in index template

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,8 +96,8 @@ Python backend rewrite by Brandon Whaley, Ramnode LLC, http://ramnode.com
         <p class="pull-right">
             <a href="#">Back to top</a>
         </p>
-        <p>Inspired by <a href="http://github.com/telephone/LookingGlass">LookingGlass</a></p>
-        <p>Python backend by <a href="http://ramnode.com">RamNode</a></p>
+        <p>Inspired by <a href="https://github.com/telephone/LookingGlass">LookingGlass</a></p>
+        <p>Python backend by <a href="https://github.com/ramnode">RamNode</a></p>
       </footer>
 
     </div><!-- /container -->
