--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,11 @@ Python backend rewrite by Brandon Whaley, Ramnode LLC, http://ramnode.com
       <!-- Network Information -->
       <section id="information">
         <div class="row">
+          {% if not additional_lgs -%}
+          <div class="span12">
+          {%- else -%}
           <div class="span8">
+          {%- endif %}
             <div class="well">
               <span id="legend">Network information</span><!-- IE/Safari dislike <legend> out of context -->
               <p>Server Location: <b>{{ site_location }}</b></p>
@@ -48,16 +52,19 @@ Python backend rewrite by Brandon Whaley, Ramnode LLC, http://ramnode.com
               <p>Your IP Address: <b><a href="#tests" id="userip">{{ request.remote_addr }}</a></b></p>
             </div>
           </div>
+          {% if additional_lgs -%}
           <div class=span4>
             <div class=well>
               <span id=legend>
                 More Locations
               </span>
-              {% for lg_url, lg_url_description in additional_lgs %}
+              {% for lg_url, lg_url_description in additional_lgs -%}
                 <p><a href="{{ lg_url }}">{{ lg_url_description }}</a></p>
-              {% endfor %}
+              {%- endfor %}
             </div>
           </div>
+          {%- endif %}
+        </div>
       </section>
 
       <!-- Network Tests -->
