Fix HTML Tag syntax

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,9 @@ Python backend rewrite by Brandon Whaley, Ramnode LLC, http://ramnode.com
             </div>
           </div>
           {% if additional_lgs -%}
-          <div class=span4>
-            <div class=well>
-              <span id=legend>
+          <div class="span4">
+            <div class="well">
+              <span id="legend">
                 More Locations
               </span>
               {% for lg_url, lg_url_description in additional_lgs -%}
